Issue #7070: Fix problem with builtin round function for large odd integer arguments.  Also fixes the sign of round(-0.0).